--- a/DotNet7/Views/Home/Index.cshtml
+++ b/DotNet7/Views/Home/Index.cshtml
@@ -5,6 +5,44 @@
 }
 
 
+<ul class="navbar-nav">
+    @if (User.Identity.IsAuthenticated)
+    {
+        <li class="nav-item">
+            Hello @User.Identity.Name!
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" asp-area="" asp-page="/logout" asp-route-returnUrl="/" method="post">
+                <button id="logoutButton" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            </form>
+        </li>
+
+
+    }
+    else
+    {
+        @*
+    <li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-page="/Account/Login">Login</a>
+    </li>*@
+    }
+</ul>
+
+@if (User.Identity.IsAuthenticated)
+{
+    <table class="table table-sm">
+        @foreach (var claim in User.Claims)
+        {
+            <tr>
+                <td>@claim.Type</td>
+                <td>@claim.Value</td>
+            </tr>
+        }
+    </table>
+}
+
+
+
 <div class="container">
     <table class="table table-bordered">
         <tr>
@@ -54,20 +92,19 @@
                 "Fld_MobileNumber": "9057083587",
             }
 
-            $("#startButton").click(function () {
+            $("#logoutButton").click(function () {
                 $.ajax({
                     type: 'Post',
-                    data: JSON.stringify(vals),
-                    url: "/api/MasterApi/AddMember",
-                    contentType: "application/json",
+                    url: "/logout",
                     success: function (response) {
                         console.log(response);
-                        if (response.fld_Status == 1) {
-                            alert(`Member Successfully Created: Membership${response.fld_MembershipNumber}`);
-                        }
-                        else {
-                            alert("Please Contact to Developer");
-                        }
+                        window.location.reload();
+                        //if (response.fld_Status == 1) {
+                        //    alert(`Member Successfully Created: Membership${response.fld_MembershipNumber}`);
+                        //}
+                        //else {
+                        //    alert("Please Contact to Developer");
+                        //}
 
                     },
                     Error: function (e) {
