--- a/DotNet7/Views/Home/Index.cshtml
+++ b/DotNet7/Views/Home/Index.cshtml
@@ -12,20 +12,14 @@
             Hello @User.Identity.Name!
         </li>
         <li class="nav-item">
-            <form class="form-inline" asp-area="" asp-page="/logout" asp-route-returnUrl="/" method="post">
+            <form class="form-inline" >
                 <button id="logoutButton" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
 
 
     }
-    else
-    {
-        @*
-    <li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-page="/Account/Login">Login</a>
-    </li>*@
-    }
+
 </ul>
 
 @if (User.Identity.IsAuthenticated)
