--- a/DotNet7/Views/Shared/_Layout.cshtml
+++ b/DotNet7/Views/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PayAmount">Pay</a>
+                        </li>     <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LoanApplication">Loan Application</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
