--- a/DotNet7/Views/Home/OpenDepositAccount.cshtml
+++ b/DotNet7/Views/Home/OpenDepositAccount.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Data;
 @{
     ViewData["Title"] = "OpenDepositAccount";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
 @{
@@ -10,131 +10,159 @@
     var schemeList = ListData?.Tables[1];
 }
 
-<h1>Open Deposit Account</h1>
 
-<div class="container" id="memberSearchSection">
-    <div class="row text-center">
-        <div class="col-md-12 ">
-            <input id="membershipNumber" class="col-md-6" style="height: 40px;" placeholder="Enter Membership Number" />
-            <button id="VerifyButton" class="col-md-4 btn btn-outline-success">Verify</button>
-        </div>
+<div class="row">
+    <!--  page header -->
+    <div class="col-lg-12">
+        <h1 class="page-header">Deposit Account</h1>
     </div>
+    <!-- end  page header -->
 </div>
 
-<div class="row" style="margin-top:50px;align-content:flex-start">
+<div class="row">
+    <div class="col-lg-12">
+        <!-- Form Elements -->
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-md-6">To Add New Account Please Enter Membership Number and Verify</div>
+                    <div class="col-md-6">
+                        <input style="padding:5px 10px" id="membershipNumber" placeholder="Enter Membership Number" />
+                        <button id="VerifyButton" style="margin-left:20px;padding:5px 20px" class="btn btn-success">Verify</button>
+                    </div>
 
-    <div class="col-md-8 col-lg-8 col-sm-8 text-start">
-        @if (AccountsListData?.Rows.Count > 0)
-        {
-            <table class="table table-bordered">
-                <tr>
-                    <th>SrNo</th>
-                    <th>Membership Number</th>
-                    <th>Name</th>
-                    <th>Account Number</th>
-                    <th>Amount</th>
-                    <th>Scheme</th>
-                    <th>Type</th>
-                    <th>Status</th>
-                </tr>
-                @{
-                    var srNO = 1;
-                }
-                @for (int i = 0; i < AccountsListData?.Rows.Count; i++)
+
+                </div>
+
+            </div>
+            <div class="panel-body" style="display:none" id="memberDetailsSection">
+                <div class="row">
+                    <div class="form-group col-lg-6 ">
+                        <label>Member Name</label>
+                        <input readonly="readonly" id="memberName" class="form-control">
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <label>Membership Number</label>
+                        <input readonly="readonly" id="membershipNo" class="form-control" placeholder="Enter text">
+                    </div>
+                    <div class="form-group col-lg-6 ">
+                        <label>Mobile Number</label>
+                        <input readonly="readonly" maxlength="10" id="mobileNumber" class="form-control">
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <label>Email</label>
+                        <input readonly="readonly" id="emailAddress" class="form-control" placeholder="Enter text">
+                    </div>
+
+                    <div class="form-group col-lg-6">
+                        <label>Account Scheme</label>
+
+                        <select class="form-control" id="accountScheme">
+                            @*<option value="0">Select Scheme</option>*@
+                            @for (int i = 0; i < schemeList?.Rows.Count; i++)
+                            {
+                                <option value=@schemeList.Rows[i]["Fld_SchemeCode"]>@schemeList.Rows[i]["Fld_SchemeName"]</option>
+                            }
+
+
+                        </select>
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <label>Start Date</label>
+                        <input class="form-control" id="startDate" type="date">
+                    </div>
+
+                    <div class="form-group col-lg-6">
+                        <label>Maturity Date</label>
+                        <input id="maturityDate" type="date" class="form-control" placeholder="Enter text">
+                    </div>
+
+                    <div class="form-group col-lg-6">
+                        <label>Deposit Amount</label>
+                        <input id="depositAmount" class="form-control" type="number" placeholder="Enter number">
+                    </div>
+
+
+
+                </div>
+                <div class="panel-footer">
+                    <button type="submit" id="SubmitButton" class="btn btn-primary">Open Account</button>
+
+                </div>
+            </div>
+        </div>
+        <!-- End Form Elements -->
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <!-- Advanced Tables -->
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                All Records
+
+            </div>
+            <div class="panel-body">
+                @if (AccountsListData?.Rows.Count > 0)
                 {
-                    <tr>
-                        <td>@srNO</td>
-                        <td>@AccountsListData.Rows[i]["Fld_MembershipNumber"]</td>
-                        <td>@AccountsListData.Rows[i]["Fld_MemberName"]</td>
-                        <td>@AccountsListData.Rows[i]["Fld_AccountNumber"]</td>
-                        <td>@AccountsListData.Rows[i]["Fld_Amount"]</td>
-                        <td>@AccountsListData.Rows[i]["Fld_SchemeName"]</td>
-                        <td>@AccountsListData.Rows[i]["Fld_SchemeType"]</td>
-                        <td>@AccountsListData.Rows[i]["Fld_Status"]</td>
-                    </tr>
-                    srNO++;
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <thead>
+                                <tr>
+                                    <th>Sr No</th>
+                                    <th>Membership Number</th>
+                                    <th>Name</th>
+                                    <th>Account Number</th>
+                                    <th>Amount</th>
+                                    <th>A/C Type</th>
+                                    <th>Scheme</th>
+                                    <th>Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    var srNO = 1;
+                                }
+                                @for (int i = 0; i < AccountsListData?.Rows.Count; i++)
+                                {
+                                    <tr class="odd gradeX">
+                                        <td class="center">@srNO</td>
+                                        <td class="center">@AccountsListData.Rows[i]["Fld_MembershipNumber"]</td>
+                                        <td class="center">@AccountsListData.Rows[i]["Fld_MemberName"]</td>
+                                        <td class="center">@AccountsListData.Rows[i]["Fld_AccountNumber"]</td>
+                                        <td class="center">@AccountsListData.Rows[i]["Fld_Amount"]</td>
+                                        <td class="center">@AccountsListData.Rows[i]["Fld_SchemeName"]</td>
+                                        <td class="center">@AccountsListData.Rows[i]["Fld_SchemeType"]</td>
+                                        <td class="center">@AccountsListData.Rows[i]["Fld_Status"]</td>
+                                    </tr>
+                                    srNO++;
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 }
-
-
-            </table>
-        }
-        else
-        {
-            <h3 class="text-center">No Records Availble!</h3>
-        }
-    </div>
-
-    <div class="col-md-4 col-lg-4 col-sm-4" style="display:none" id="memberDetailsSection">
-        <div class=" card-body">
-
-            <div class="col-md-12" style="margin:20px">
-                <label class="col-md-4" style="float:left">Member Name</label>
-                <input readonly="readonly" id="memberName" class="col-md-8" type="text" />
+                else
+                {
+                    <h3 class="text-center">No Records Availble!</h3>
+                }
             </div>
-
-
-            <div class="col-md-12" style="margin:20px">
-                <label class="col-md-4" style="float:left">Membership Number</label>
-                <input readonly="readonly" id="membershipNo" class="col-md-8" type="text" />
-            </div>
-
-
-
-
-            <div class="col-md-12" style="margin:20px">
-                <label class="col-md-4" style="float:left">Mobile Number</label>
-                <input readonly="readonly" maxlength="10" id="mobileNumber" class="col-md-8" type="text" />
-            </div>
-
-
-
-            <div class="col-md-12" style="margin:20px">
-                <label class="col-md-4" style="float:left">Email Address</label>
-                <input readonly="readonly" id="emailAddress" class="col-md-8" type="text" />
-            </div>
-
-
-
-            <div class="col-md-12" style="margin:20px">
-                <label class="col-md-4" style="float:left">Account Scheme</label>
-                <select id="accountScheme">
-                    @*<option value="0">Select Scheme</option>*@
-                    @for (int i = 0; i < schemeList?.Rows.Count; i++)
-                    {
-                        <option value=@schemeList.Rows[i]["Fld_SchemeCode"]>@schemeList.Rows[i]["Fld_SchemeName"]</option>
-                    }
-
-
-                </select>
-            </div>
-
-            <div class="col-md-12" style="margin:20px">
-                <label class="col-md-4" style="float:left">Start Date</label>
-                <input id="startDate" class="col-md-8" type="date" />
-            </div>
-
-            <div class="col-md-12" style="margin:20px">
-                <label class="col-md-4" style="float:left">Maturity Date</label>
-                <input id="maturityDate" class="col-md-8" type="date" />
-            </div>
-
-            <div class="col-md-12" style="margin:20px">
-                <label class="col-md-4" style="float:left">Deposit Amount</label>
-                <input id="depositAmount" class="col-md-8" type="number" />
-            </div>
-
-
         </div>
-        <div class="card-footer ">
-            <button style="margin-top:50px" id="SubmitButton" class="btn btn-success" name="Submit">Open Account</button>
-        </div>
+        <!--End Advanced Tables -->
+
     </div>
-
-
 </div>
+
 
 
 @section Scripts{
+    <!-- Page-Level Plugin Scripts-->
+    <script src="/assets/plugins/dataTables/jquery.dataTables.js"></script>
+    <script src="/assets/plugins/dataTables/dataTables.bootstrap.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#dataTables-example').dataTable();
+        });
+    </script>
     <script>
         $(document).ready(function () {
             $("#VerifyButton").click(function () {
