--- a/DotNet7/Views/Home/PayAmount.cshtml
+++ b/DotNet7/Views/Home/PayAmount.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewData["Title"] = "PayAmount";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout1.cshtml";
 }
 
-<h3>Pay Your Dues</h3>
+@*<h3>Pay Your Dues</h3>
 
 <div style="margin-top:50px" class="container" id="SearchSection">
     <div class="row text-center">
@@ -12,8 +12,63 @@
             <button id="getDeatilsButton" class="col-md-4 btn btn-outline-success">Get Details</button>
         </div>
     </div>
+</div>*@
+
+<div class="row">
+    <!--  page header -->
+    <div class="col-lg-12">
+        <h1 class="page-header">Pay Your Dues</h1>
+    </div>
+    <!-- end  page header -->
 </div>
 
+<div class="row">
+    <div class="col-lg-12">
+        <!-- Form Elements -->
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-md-6">To depost FD or RD amount please enter account number and Verify</div>
+                    <div class="col-md-6">
+                        <input style="padding:5px 10px" id="accountNumber" placeholder="Enter Account Number" />
+                        <button id="getDeatilsButton" style="margin-left:20px;padding:5px 20px" class="btn btn-success">Verify</button>
+                    </div>
+
+
+                </div>
+
+            </div>
+            <div class="panel-body" >
+                <div class="row">
+
+                    <input hidden="hidden" readonly="readonly" id="emiId" type="text" />
+
+                    <div class="form-group col-lg-6 ">
+                        <label>Member Name</label>
+                        <input readonly="readonly" id="memberName" class="form-control">
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <label>Due Date</label>
+                        <input readonly="readonly" id="dueDate" class="form-control" placeholder="Enter text">
+                    </div>
+                    <div class="form-group col-lg-6 ">
+                        <label>Deposit Amount</label>
+                        <input readonly="readonly" id="depositAmount" class="form-control">
+                    </div>
+                  
+
+
+                </div>
+                <div class="panel-footer">
+                    <button type="submit" id="depositButton" class="btn btn-primary">Deposit Amount</button>
+
+                </div>
+            </div>
+        </div>
+        <!-- End Form Elements -->
+    </div>
+</div>
+@*
 <div class="row" style="margin-top:50px">
 
     <div class="col-md-6 col-sm-6 col-lg-6 text-center">
@@ -50,7 +105,7 @@
 
 
 </div>
-
+*@
 
 
 @section Scripts{
