--- a/DotNet7/Views/Home/LoanApplication.cshtml
+++ b/DotNet7/Views/Home/LoanApplication.cshtml
@@ -164,6 +164,12 @@
 
 @section Scripts{
 
+
+    <script>
+        $('#side-menu li').removeClass('selected')
+        $('#menu-nav-loanapplication').addClass('selected')
+
+    </script>
     <script src="/cp/loanapplication.js"></script>
 
 }
