--- a/DotNet7/Views/Home/OpenDepositAccount.cshtml
+++ b/DotNet7/Views/Home/OpenDepositAccount.cshtml
@@ -162,6 +162,12 @@
         $(document).ready(function () {
             $('#dataTables-example').dataTable();
         });
+     
+        </script>
+    <script>
+        $('#side-menu li').removeClass('selected')
+        $('#menu-nav-accounts').addClass('selected')
+
     </script>
     <script>
         $(document).ready(function () {
