--- a/DotNet7/Views/Home/PayAmount.cshtml
+++ b/DotNet7/Views/Home/PayAmount.cshtml
@@ -109,6 +109,13 @@
 
 
 @section Scripts{
+
+    <script>
+        $('#side-menu li').removeClass('selected')
+        $('#menu-nav-pay').addClass('selected')
+
+    </script>
+
     <script>
         $(document).ready(function () {
             $("#getDeatilsButton").click(function () {
