--- a/DotNet7/Views/Home/Registration.cshtml
+++ b/DotNet7/Views/Home/Registration.cshtml
@@ -71,7 +71,14 @@
 
 @section Scripts{
     <script>
+        $('#side-menu li').removeClass('selected')
+        $('#menu-nav-registration').addClass('selected')
+
+    </script>
+    <script>
         $(document).ready(function () {
+
+
 
 
             $("#SubmitButton").click(function () {
