--- a/DotNet7/Views/Shared/_Layout1.cshtml
+++ b/DotNet7/Views/Shared/_Layout1.cshtml
@@ -315,15 +315,26 @@
                     <li id="menu-nav-pay">
                         <a href="/Home/PayAmount"><i class="fa fa-flask fa-fw"></i>Pay RD</a>
                     </li>
+
+                    @*   <li>
+                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Loan<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">*@
                     <li id="menu-nav-loanapplication">
                         <a href="/Home/LoanApplication"><i class="fa fa-table fa-fw"></i>Loan Application</a>
                     </li>
                     <li id="menu-nav-payloanamount">
                         <a href="/Home/PayLoanAmount"><i class="fa fa-table fa-fw"></i>Pay Loan Amount</a>
                     </li>
-
-                </ul>
-                <!-- end side-menu -->
+                    @*
+                    </ul>
+                    </ul>*@
+                    <li id="menu-nav-rdreport">
+                        <a href="/Home/RDReport"><i class="fa fa-table fa-fw"></i>RD Report</a>
+                    </li>
+                    <li id="menu-nav-loanreport">
+                        <a href="/Home/PayAmount"><i class="fa fa-table fa-fw"></i>Loan Report</a>
+                    </li>
+                    <!-- end side-menu -->
             </div>
             <!-- end sidebar-collapse -->
         </nav>
