commit sercices and repositories

--- a/DotNet7/Views/Shared/_Layout1.cshtml
+++ b/DotNet7/Views/Shared/_Layout1.cshtml
@@ -332,7 +332,7 @@
                         <a href="/Home/RDReport"><i class="fa fa-table fa-fw"></i>RD Report</a>
                     </li>
                     <li id="menu-nav-loanreport">
-                        <a href="/Home/PayAmount"><i class="fa fa-table fa-fw"></i>Loan Report</a>
+                        <a href="/Home/LoanReport"><i class="fa fa-table fa-fw"></i>Loan Report</a>
                     </li>
                     <!-- end side-menu -->
             </div>
