--- a/DotNet7/Views/Home/Index.cshtml
+++ b/DotNet7/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <!-- Welcome -->
     <div class="col-lg-12">
         <div class="alert alert-info">
-            <i class="fa fa-folder-open"></i><b>&nbsp;Hello ! </b>Welcome Back <b>Jonny Deen </b>
+            <i class="fa fa-folder-open"></i><b>&nbsp;Hello ! </b>Welcome Back <b>@User.Identity.Name </b>
             <i class="fa  fa-pencil"></i><b>&nbsp;2,000 </b>Support Tickets Pending to Answere. nbsp;
         </div>
     </div>
