--- a/DotNet7/Views/Home/PayLoanAmount.cshtml
+++ b/DotNet7/Views/Home/PayLoanAmount.cshtml
@@ -180,9 +180,11 @@
                         },
                         Error: function (e) {
                             console.log(e);
+                            alert("please fill all fields");
                         },
                         catch: function (e) {
                             console.log(e);
+                            alert("please fill all fields");
                         }
 
                     });
